
  sync no longer fails for write-only file arguments.
  [bug introduced with argument support to sync in coreutils-8.24]

  'tail -f file | filter' no longer exits immediately on AIX.
  [bug introduced in coreutils-8.28]

  'tail -f file | filter' no longer goes into an infinite loop
  if filter exits and SIGPIPE is ignored.
  [bug introduced in coreutils-8.28]

** Changes in behavior

  echo now always processes backslash escapes when the POSIXLY_CORRECT
  environment variable is set.

  When possible 'ln A B' now merely links A to B and reports an error
  if this fails, instead of statting A and B before linking.  This
  uses fewer system calls and avoids some races.  The old statting
  approach is still used in situations where hard links to directories
  are allowed (e.g., NetBSD when superuser).

  ls --group-directories-first will also group symlinks to directories.

  'test -a FILE' is not supported anymore.  Long ago, there were concerns about
  the high probability of humans confusing the -a primary with the -a binary
  operator, so POSIX changed this to 'test -e FILE'.  Scripts using it were
  already broken and non-portable; the -a unary operator was never documented.

** New features

  id now supports specifying multiple users.

  printf, seq, sleep, tail, and timeout now accept floating point
  numbers in either the current or the C locale.  For example, if the
  current locale's decimal point is ',', 'sleep 0,1' and 'sleep 0.1'
  now mean the same thing.  Previously, these commands accepted only
  C-locale syntax with '.' as the decimal point.  The new behavior is
  more compatible with other implementations in non-C locales.

  test now supports the '-N FILE' unary operator (like e.g. bash) to check
  whether FILE exists and has been modified since it was last read.

** New commands

  basenc is added to complement existing base64,base32 commands,
  and encodes and decodes printable text using various common encodings: