@@ -17,7 +17,6 @@
 /* Written by jla; revised by djm */
 
 #include <config.h>
-#include <getopt.h>
 #include <stdio.h>
 
 #include <sys/types.h>
@@ -35,11 +34,6 @@
 #define AUTHORS \
   proper_name ("Joseph Arceneaux"), \
   proper_name ("David MacKenzie")
-
-static struct option const long_options[] =
-{
-  {NULL, 0, NULL, 0}
-};
 
 static int
 userid_compare (const void *v_a, const void *v_b)
@@ -133,10 +127,9 @@ main (int argc, char **argv)
 
   atexit (close_stdout);
 
-  parse_long_options (argc, argv, PROGRAM_NAME, PACKAGE_NAME, Version,
-                      usage, AUTHORS, (char const *) NULL);
-  if (getopt_long (argc, argv, "", long_options, NULL) != -1)
-    usage (EXIT_FAILURE);
+  parse_gnu_standard_options_only (argc, argv, PROGRAM_NAME, PACKAGE_NAME,
+                                   Version, true, usage, AUTHORS,
+                                   (char const *) NULL);
 
   switch (argc - optind)
     {
